...
                ToolbarItem(placement: .cancellationAction) {
                    Button("Cancel") {
                        dismiss()
                    }
                }
                ToolbarItem(placement: .confirmationAction) {
                    Button("Add") {
                        importKey()
                    }
                    .disabled(!isValid)
                }
            }
            .fileImporter(
...
